fix introspection of sun.util.locale.provider